--- a/K-Life insurance/index.html
+++ b/K-Life insurance/index.html
@@ -492,6 +492,26 @@
                                 </div>
                                 <div class="section-contents">
                                     <div class="col4 clear">
+                                        <div class="col3">
+                                            <div class="col"><a href="">
+                                                <i></i>
+                                                <h3>소비자</h3>
+                                                <p class="show">생명보험소비자가</br>꼭 알아야 할 주요 정보</p>
+                                                <p class="">내보험찾아줌, 공시실</br>소비자포털, 보험다모아 등</p>
+                                            </a></div>
+                                            <div class="col"><a href="">
+                                                <i></i>
+                                                <h3>모집종사자</h3>
+                                                <p class="show">보험고객의 미래를 설계하는</br> 모집종사자 관리센터</p>
+                                                <p class="">설계사 등록/말소, 자격시험,</br>우수인증설계사, 보험대리점 등</p>
+                                            </a></div>
+                                            <div class="col"><a href="">
+                                                <i></i>
+                                                <h3>회원사</h3>
+                                                <p class="show">보험문화 확산을 위한</br> 건전한 자율규제 운영</p>
+                                                <p class="">보험상품광고심의, 신상품심의,</br>IFRS17,옴부즈만 등</p>
+                                            </a></div>
+                                        </div>
                                         <div class="col col2">
                                             <div class="col"><a href="">
                                                 <h3>생명보험협회</h3>
@@ -519,25 +539,6 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col"><a href="">
-                                            <i></i>
-                                            <h3>소비자</h3>
-                                            <p class="show">생명보험소비자가</br>꼭 알아야 할 주요 정보</p>
-                                            <p class="">내보험찾아줌, 공시실</br>소비자포털, 보험다모아 등</p>
-                                        </a></div>
-                                        <div class="col"><a href="">
-                                            <i></i>
-                                            <h3>모집종사자</h3>
-                                            <p class="show">보험고객의 미래를 설계하는</br> 모집종사자 관리센터</p>
-                                            <p class="">설계사 등록/말소, 자격시험,</br>우수인증설계사, 보험대리점 등</p>
-                                        </a></div>
-                                        <div class="col"><a href="">
-                                            <i></i>
-                                            <h3>회원사</h3>
-                                            <p class="show">보험문화 확산을 위한</br> 건전한 자율규제 운영</p>
-                                            <p class="">보험상품광고심의, 신상품심의,</br>IFRS17,옴부즈만 등</p>
-                                        </a></div>
-                                       
                                     </div>
                                 </div>
                             </div>
@@ -809,28 +810,29 @@
                                         <div class="col">
                                             <ul class="custom-go clear">
                                                 <li><a href="">
+                                                    <i></i>
                                                     <h3>소비자포털</h3>
                                                     <p>생명보험소비자가 꼭 알아야 할 주요 정보</p>
                                                     <span class="btn-go">바로가기 →</span>
-                                                    <i></i>
                                                 </a></li>
                                                 <li><a href="">
+                                                    <i></i>
                                                     <h3>내보험찾아줌</h3>
                                                     <p>생명보험소비자가 꼭 알아야 할 주요 정보</p>
                                                     <span class="btn-go">바로가기 →</span>
-                                                    <i></i>
+                                                    
                                                 </a></li>
                                                 <li><a href="">
+                                                    <i></i>
                                                     <h3>공시실</h3>
                                                     <p>생명보험소비자가 꼭 알아야 할 주요 정보</p>
-                                                    <span class="btn-go">바로가기 →</span>
-                                                    <i></i>
+                                                    <span class="btn-go">바로가기 →</span> 
                                                 </a></li>
                                                 <li><a href="">
+                                                    <i></i>
                                                     <h3>보험 다모아</h3>
                                                     <p>생명보험소비자가 꼭 알아야 할 주요 정보</p>
                                                     <span class="btn-go">바로가기 →</span>
-                                                    <i></i>
                                                 </a></li>
                                             </ul>
                                         </div>
