--- a/K-Life insurance/index.html
+++ b/K-Life insurance/index.html
@@ -959,7 +959,7 @@
         </main>
     <!-- footer -->
         <footer>
-            <div class="footer-inner">
+            <section class="footer-inner">
                 <div class="footer-swipe ">
                     <div class="swipe-container inwrap ">
                         <div class="swipe-btn">
@@ -1125,32 +1125,23 @@
                         <a href="" class="good"><img src="images/good.png"></a>
                     </div>
                 </div>
-            </div>
+            </section>
         </footer>
     <!-- pagenav& pagecontroller -->
-        <div class="page-nav " >
-            <ul>
-                <li><a href="">
-                    <span class="on">HOME</span>
-                </a></li>
-                <li><a href="">
-                    <span>생명보험협회</span>
-                </a></li>
-                <li><a href="">
-                    <span>소비자</span>
-                </a></li>
-                <li><a href="">
-                    <span>모집종사자</span>
-                </a></li>
-                <li><a href="">
-                    <span>회원사</span>
-                </a></li>
+        <div class="page-nav" >
+            <ul class="pageBtn-wrap">
+                <li><span class="on">HOME</span></li>
+                <li><span>생명보험협회</span></li>
+                <li><span>소비자</span></li>
+                <li><span>모집종사자</span></li>
+                <li><span>회원사</span></li>
             </ul>
         </div>
         <div class="page-control">
-            <div class="btn-up"><a href=""><img src="images/btn_up.png" alt=""></a></div>
-            <div class="btn-down"><a href=""><img src="images/btn_down.png" alt=""></a></div>
-            <div class="btn-top"><a href="#"><img src="images/btn_top.png" alt=""></a></div>
+            <button class="btn up"><img src="images/btn_up.png" alt=""></button>
+            <button class="btn down"><img src="images/btn_down.png" alt=""></button>
+            <button class="top"><img src="images/btn_top.png" alt=""></button>
+
         </div>
     </div>   
 </body>
