--- a/index.html
+++ b/index.html
@@ -1,28 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>young's page</title>
-    <link rel="stylesheet" href="/style.css" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>y0u&g.e</title>
+</head>
+<body>
+  <div class="page-wrap">
+    <header>
+      <h1 class="logo" aria-label="young e">Y0U&G.E</h1>
+      <nav class="h-nav" id="h-nav">
+        <h1 class="sr-only">네비게이션</h1>
+        <ul>
+          <li><button type="button">PORTFOLIO</button></li>
+          <li><button type="button">PROJECT</button></li>
+          <li><button type="button">MINI WORK</button></li>
+          <li><button type="button">CONTACT</button></li>
+        </ul>
+      </nav>
 
-    <style>
-      a {
-        color: black;
-        display: block;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="wrap">
-      <h1>young's page</h1>
-    </div>
-    <div>
-      <a href="kakao/index.html">Kakao</a>
-      <a href="jenniferSoft/index.html">Jennifer Soft</a>
-      <a href="Microsoft/index.html">Microsoft</a>
-      <a href="/K-Life insurance/index.html">생명보험협회</a>
-    </div>
-  </body>
+      <div class="contents-detail">
+
+      </div>
+    </header>
+    <main>
+      <header>
+        <div class="m-header">
+          <ul>
+            <li>PORTFOLIO</li>
+            <li>PROJECT</li>
+            <li>WORK</li>
+            <li>CONTACT</li>
+          </ul>
+        </div>
+      </header>
+      <div class="sections-container">
+        <section class="s-portfolio">
+          <h1 class="sr-only">about portfolio</h1>
+          <ul>
+            <li>
+              <a href="./portfolio/kakao/index.html" target="_blank">
+                <div class="result-img">
+                  <span class="sr-only">kakao page</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="./portfolio/jenniferSoft/index.html" target="_blank">
+                <div class="result-img">
+                  <span class="sr-only">jenniferSoft page</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="./portfolio/Microsoft/index.html" target="_blank">
+                <div class="result-img">
+                  <span class="sr-only">microsoft page</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="./portfolio/K-Life insurance/index.html" target="_blank">
+                <div class="result-img">
+                  <span class="sr-only">korea life insurance association page</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="s-project">
+          <h1 class="sr-only">about project</h1>
+          <ul>
+            <li>
+              <a href="" target="_blank">
+                <div class="result-img">
+                  <span class="sr-only" lang="ko">머니부</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="s-mini-work">
+          <h1 class="sr-only">about mini-work</h1>
+          <ul>
+            <li>
+              <a href="" target="_blank">
+                <div class="result-img">
+                  <span class="sr-only">kakao page</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="" target="_blank">
+                <div class="result-img">
+                  <span class="sr-only">jenniferSoft page</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="" target="_blank">
+                <div class="result-img">
+                  <span class="sr-only">microsoft page</span>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="" target="_blank">
+                <div class="result-img">
+                  <span class="sr-only">korea life insurance association page</span>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="s-contact">
+          <h1>LEE GA YOUNG</h1>
+          <div class="profile">
+            <div class="p-image">
+              프로필 사진이 들어갈 자리
+            </div>
+            <div><a href="https://github.com/gay0ung">GITHUB</a></div>
+            <address>
+              <span class="p-number">010-9243-8180</span>
+              
+            </address>
+          </div>
+        </section>
+      </div>
+    </main>
+  </div>
+</body>
 </html>
