--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+    integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <title>y0u&g.e</title>
 </head>
 <body>
@@ -13,15 +15,109 @@
       <nav class="h-nav" id="h-nav">
         <h1 class="sr-only">네비게이션</h1>
         <ul>
-          <li><button type="button">PORTFOLIO</button></li>
-          <li><button type="button">PROJECT</button></li>
-          <li><button type="button">MINI WORK</button></li>
-          <li><button type="button">CONTACT</button></li>
+          <li><button type="button" id="pf-btn" class="click">PORTFOLIO</button></li>
+          <li><button type="button" id="pj-btn" class="">PROJECT</button></li>
+          <li><button type="button" id="mw-btn" class="">MINI WORK</button></li>
+          <li><button type="button" id="cont-btn" class="">CONTACT</button></li>
         </ul>
       </nav>
 
       <div class="contents-detail">
-
+        <h2>detail</h2>
+        <ul class="pr-detail click">
+          <li class="show">
+            <h3>kakao page</h3>
+            <div>
+              <strong>skils</strong>
+              <p>내용</p>
+            </div>
+            <div>
+              <strong>설명</strong>
+              <p>내용</p>
+            </div>
+          </li>
+          <li>
+            <h3>jenniferSoft</h3>
+            <div>
+              <strong>skils</strong>
+              <p>내용</p>
+            </div>
+            <div>
+              <strong>설명</strong>
+              <p>내용</p>
+            </div>
+          </li>
+          <li>
+            <h3>microsoft</h3>
+            <div>
+              <strong>skils</strong>
+              <p>내용</p>
+            </div>
+            <div>
+              <strong>설명</strong>
+              <p>내용</p>
+            </div>
+          </li>
+          <li>
+            <h3>korea life insurance association</h3>
+            <div>
+              <strong>skils</strong>
+              <p>내용</p>
+            </div>
+            <div>
+              <strong>설명</strong>
+              <p>내용</p>
+            </div>
+          </li>
+        </ul>
+        <ul class="pj-detail">
+          <li>
+            <h3>korea life insurance association</h3>
+            <div>
+              <strong>skils</strong>
+              <p>내용</p>
+            </div>
+            <div>
+              <strong>설명</strong>
+              <p>내용</p>
+            </div>
+          </li>
+        </ul>
+        <ul class="mw-detail">
+          <li>
+            <h3>jenniferSoft</h3>
+            <div>
+              <strong>skils</strong>
+              <p>내용</p>
+            </div>
+            <div>
+              <strong>설명</strong>
+              <p>내용</p>
+            </div>
+          </li>
+          <li>
+            <h3>microsoft</h3>
+            <div>
+              <strong>skils</strong>
+              <p>내용</p>
+            </div>
+            <div>
+              <strong>설명</strong>
+              <p>내용</p>
+            </div>
+          </li>
+          <li>
+            <h3>korea life insurance association</h3>
+            <div>
+              <strong>skils</strong>
+              <p>내용</p>
+            </div>
+            <div>
+              <strong>설명</strong>
+              <p>내용</p>
+            </div>
+          </li>
+        </ul>
       </div>
     </header>
     <main>
@@ -40,28 +136,28 @@
           <h1 class="sr-only">about portfolio</h1>
           <ul>
             <li>
-              <a href="./portfolio/kakao/index.html" target="_blank">
+              <a href="./kakao/index.html" target="_blank">
                 <div class="result-img">
                   <span class="sr-only">kakao page</span>
                 </div>
               </a>
             </li>
             <li>
-              <a href="./portfolio/jenniferSoft/index.html" target="_blank">
+              <a href="./jenniferSoft/index.html" target="_blank">
                 <div class="result-img">
                   <span class="sr-only">jenniferSoft page</span>
                 </div>
               </a>
             </li>
             <li>
-              <a href="./portfolio/Microsoft/index.html" target="_blank">
+              <a href="./Microsoft/index.html" target="_blank">
                 <div class="result-img">
                   <span class="sr-only">microsoft page</span>
                 </div>
               </a>
             </li>
             <li>
-              <a href="./portfolio/K-Life insurance/index.html" target="_blank">
+              <a href="./K-Life insurance/index.html" target="_blank">
                 <div class="result-img">
                   <span class="sr-only">korea life insurance association page</span>
                 </div>
@@ -86,31 +182,41 @@
         <section class="s-mini-work">
           <h1 class="sr-only">about mini-work</h1>
           <ul>
+            <!-- vanilla javascript -->
             <li>
-              <a href="" target="_blank">
+              <a href="./mini works/javascript/paint-JS/index.html" target="_blank">
                 <div class="result-img">
-                  <span class="sr-only">kakao page</span>
+                  <span class="sr-only">painting page</span>
                 </div>
               </a>
             </li>
             <li>
-              <a href="" target="_blank">
+              <a href="./mini works/javascript/Vanilla-JS/index.html" target="_blank">
                 <div class="result-img">
-                  <span class="sr-only">jenniferSoft page</span>
+                  <span class="sr-only">user page(googel)</span>
+                </div>
+              </a>
+            </li>
+
+            <!-- vue.js -->
+            <li>
+              <a href="#" target="_blank">
+                <div class="result-img">
+                  <span class="sr-only">search movie</span>
                 </div>
               </a>
             </li>
             <li>
-              <a href="" target="_blank">
+              <a href="#" target="_blank">
                 <div class="result-img">
-                  <span class="sr-only">microsoft page</span>
+                  <span class="sr-only">hacker news</span>
                 </div>
               </a>
             </li>
             <li>
-              <a href="" target="_blank">
+              <a href="#" target="_blank">
                 <div class="result-img">
-                  <span class="sr-only">korea life insurance association page</span>
+                  <span class="sr-only">weather page</span>
                 </div>
               </a>
             </li>
@@ -118,15 +224,25 @@
         </section>
 
         <section class="s-contact">
+          <h2 class="sr-only">contact</h2>
           <h1>LEE GA YOUNG</h1>
           <div class="profile">
             <div class="p-image">
               프로필 사진이 들어갈 자리
             </div>
-            <div><a href="https://github.com/gay0ung">GITHUB</a></div>
+            <div>
+              <a href="https://github.com/gay0ung" target="_blank">
+                <i class="fab fa-github"></i>
+                GITHUB
+              </a>
+            </div>
             <address>
-              <span class="p-number">010-9243-8180</span>
-              
+              <div>
+                <span></span>
+                <a href="tel:01092438180" class="p-number" aria-label="phone number">010-9243-8180</a>
+              </div>
+           
+              <a href="mailto:6and_end9@naver.com" aria-label="mail address">6and_end9@naver.com</a>
             </address>
           </div>
         </section>
