--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li><button type="button" id="cont-btn" class="cont-btn">CONTACT</button></li>
           <li><button type="button" id="pf-btn" class="pf-btn click">PORTFOLIO</button></li>
           <li><button type="button" id="pj-btn" class="pj-btn">PROJECT</button></li>
+          <li><button type="button" id="tpj-btn" class="pj-btn">TOY PROJECT</button></li>
           <li><button type="button" id="mw-btn" class="mw-btn">MINI WORK</button></li>
         </ul>
       </nav>
@@ -137,14 +138,14 @@
       </header>
       <div class="sections-container">
         <!-- contact -->
-        <section class="s-contact s-on" >
+        <section class="s-contact" >
           <h2 class="sr-only">contact</h2>
           <h1 class="center">LEE GA YOUNG</h1>
           <div class="profile center">
             <div class="p-image"></div>
             <address>
               <a href="https://github.com/gay0ung" target="_blank">
-                <i class="fab fa-github"></i>
+                < class="fab fa-github"></i> 
                 GITHUB
               </a>
 
@@ -161,34 +162,50 @@
           </div>
         </section>
         <!-- portfolio -->
-        <section class="s-portfolio ">
+        <section class="s-portfolio  s-on">
           <h1 class="sr-only">about portfolio</h1>
           <ul>
             <li>
-              <a href="./kakao/index.html" target="_blank" class="result-img">
-                  결과 이미지
-                  <span class="sr-only">kakao page</span>
+              <a href="./kakao/index.html" target="_blank">
+                <span class="sr-only" lang="ko">카카오 페이지</span>
+                <ul class="result-images">
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
               </a>
               <button type="button" class="detail">detail</button>
             </li>
             <li>
-              <a href="./kakao/index.html" target="_blank" class="result-img">
-                결과 이미지
-                <span class="sr-only">kakao page</span>
+              <a href="./kakao/index.html" target="_blank">
+                <span class="sr-only" lang="ko">제니퍼 소프트 페이지</span>
+                <ul class="result-images">
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
               </a>
               <button type="button" class="detail">detail</button>
             </li>
             <li>
-              <a href="./kakao/index.html" target="_blank" class="result-img">
-                결과 이미지
-                <span class="sr-only">kakao page</span>
+              <a href="./kakao/index.html" target="_blank">
+                <span class="sr-only" lang="ko">마이크로 소프트 페이지</span>
+                <ul class="result-images">
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
               </a>
               <button type="button" class="detail">detail</button>
             </li>
             <li>
-              <a href="./kakao/index.html" target="_blank" class="result-img">
-                결과 이미지
-                <span class="sr-only">kakao page</span>
+              <a href="./kakao/index.html" target="_blank">
+                <span class="sr-only" lang="ko">생명보험협회 페이지</span>
+                <ul class="result-images">
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
               </a>
               <button type="button" class="detail">detail</button>
             </li>
@@ -202,6 +219,66 @@
               <a href="./kakao/index.html" target="_blank" class="result-img">
                 결과 이미지
                 <span class="sr-only" lang="ko">머니부 페이지</span>
+              </a>
+              <button type="button" class="detail">detail</button>
+            </li>
+          </ul>
+        </section>
+
+        <!-- toy project -->
+        <section class="s-toy-project">
+          <h1 class="sr-only">about mini-work</h1>
+          <ul>
+            <!-- vanilla javascript -->
+            <li>
+              <a href="./mini works/javascript/paint-JS/index.html" target="_blank">
+                <span class="sr-only">painting page</span>
+                <ul class="result-images">
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
+              </a>
+              <button type="button" class="detail">detail</button>
+            </li>
+            <li>
+              <a href="./mini works/javascript/Vanilla-JS/index.html" target="_blank">
+                <span class="sr-only">user page(googel)</span>
+              </a>
+              <button type="button" class="detail">detail</button>
+            </li>
+        
+            <!-- vue.js -->
+            <li>
+              <a href="#" target="_blank">
+                <span class="sr-only">search movie</span>
+                <ul class="result-images">
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
+              </a>
+              <button type="button" class="detail">detail</button>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+                <span class="sr-only">hacker news</span>
+                <ul class="result-images">
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
+              </a>
+              <button type="button" class="detail">detail</button>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+                <span class="sr-only">weather page</span>
+                <ul class="result-images">
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
               </a>
               <button type="button" class="detail">detail</button>
             </li>
