--- a/mini works/javascript/paint-JS/index.html
+++ b/mini works/javascript/paint-JS/index.html
@@ -7,37 +7,32 @@
     <title>Paint JS</title>
 </head>
 <body>
-    <canvas id="jsCanvas" class="canvas"></canvas>
-    <div class="controls">
-        <div class="controls__range">
-            <input 
-                type="range" 
-                id="jsRange" 
-                min="0.1" 
-                max="5" 
-                value="2.5" 
-                step="0.1"
-            />
-        </div>
-        <div class="controls__btns">
-            <button id="jsMode">Fill</button>
-            <button id="jsSave">Save</button>
-        </div>
-        <a download=""></a>
-        <div class="controls__colors" id="jsColors">
-            <div class="controls__colors">
-                <div class="controls__color jsColor" style="background-color:#2c2c2c ;"></div>
-                <div class="controls__color jsColor" style="background-color:white ;"></div>
-                <div class="controls__color jsColor" style="background-color: #FF3B30;"></div>
-                <div class="controls__color jsColor" style="background-color: #FF9500;"></div>
-                <div class="controls__color jsColor" style="background-color: #FFCC00;"></div>
-                <div class="controls__color jsColor" style="background-color: #4CD963;"></div>
-                <div class="controls__color jsColor" style="background-color: #5AC8FA;"></div>
-                <div class="controls__color jsColor" style="background-color: #0579FF;"></div>
-                <div class="controls__color jsColor" style="background-color: #5856D6;"></div>
+    <div class="canvas-wrap">
+        <canvas id="jsCanvas" class="canvas center"></canvas>
+        <div class="controls center ">
+            <div class="controls__range">
+                <input type="range" id="jsRange" min="0.1" max="5" value="2.5" step="0.1" />
+            </div>
+            <div class="controls__btns">
+                <button id="jsMode">Fill</button>
+                <button id="jsSave">Save</button>
+            </div>
+            <a download=""></a>
+            <div class="controls__colors_wrap " id="jsColors">
+                <div class="controls__colors">
+                    <div class="controls__color jsColor" style="background-color:#2c2c2c ;"></div>
+                    <div class="controls__color jsColor" style="background-color:white ;"></div>
+                    <div class="controls__color jsColor" style="background-color: #FF3B30;"></div>
+                    <div class="controls__color jsColor" style="background-color: #FF9500;"></div>
+                    <div class="controls__color jsColor" style="background-color: #FFCC00;"></div>
+                    <div class="controls__color jsColor" style="background-color: #4CD963;"></div>
+                    <div class="controls__color jsColor" style="background-color: #5AC8FA;"></div>
+                    <div class="controls__color jsColor" style="background-color: #0579FF;"></div>
+                    <div class="controls__color jsColor" style="background-color: #5856D6;"></div>
+                </div>
             </div>
         </div>
+        <script src="app.js"></script>
     </div>
-    <script src="app.js"></script>
 </body>
 </html>
