--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </header>
       <div class="sections-container">
         <!-- contact -->
-        <section class="s-contact" >
+        <section class="s-contact s-on" >
           <h2 class="sr-only">contact</h2>
           <h1 class="center">LEE GA YOUNG</h1>
           <div class="profile center">
@@ -162,7 +162,7 @@
           </div>
         </section>
         <!-- portfolio -->
-        <section class="s-portfolio  s-on">
+        <section class="s-portfolio  ">
           <h1 class="sr-only">about portfolio</h1>
           <ul>
             <li>
